# OrbOracle-Solana

./: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  tsconfig.json
anchor/programs/oracle/: Cargo.toml
anchor/programs/oracle/src/: lib.rs
anchor/src/: index.ts  oracle-exports.ts
anchor/src/idl/: oracle.json
anchor/src/types/: oracle.ts
anchor/tests/: oracle.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[oracleId]/: InteractionClient.tsx  page.tsx
src/app/create/: page.tsx
src/app/explorer/: page.tsx
src/components/: Orb.tsx  PillNav.tsx  createOracle.tsx  navigation.tsx  oracle-card.tsx  price-chart.tsx
src/components/ui/: card.tsx  use-toast.ts
src/hooks/: use-toast.ts  useOracles.ts
src/lib/: oracleProgram.ts
src/providers/: WalletProvider.tsx
src/utils/: cluster.ts
